# music-download-telegram-bot

./: .env.example  .gitignore  AppleMusicChecker.py  AppleMusicDownloader.py  AppleMusicWebPlayback.py  Database.py  LICENSE  README.md  README.zh.md  db.py  exmaple-config.yaml  flake.nix  main.py  music-download-bot.service  pyproject.toml  requirements.txt
.githooks/: post-commit  pre-commit
.github/: FUNDING.yml
.github/workflows/: release.yml
bot/: config.py  main.py  version.py
bot/handlers/: error.py  link.py  settings.py  start.py
bot/middleware/: concurrency.py  whitelist.py
bot/models/: database.py
bot/services/: audit.py  cache.py  downloader.py  health.py  sender.py
scripts/: bump_patch_version.py  install_git_hooks.sh
src/: AppleMusicChecker.py  AppleMusicDownloader.py  Database.py  SpotifyDownloader.py  apple-music-checker.py  apple-music-downloader.py  apple_music_checker.py  apple_music_downloader.py  config.py  database.py  main.py  scaffold.py  spotify.py  spotifyDl.py  spotify_dl.py  spotify_downloader.py  utils.py
