[project]
name = "music-download-telegram-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]==21.10",
    "aiosqlite==0.20.0",
    "pyyaml==6.0.2",
    "async-lru>=2.0.5",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "pillow>=12.0.0",
    "pywidevine>=1.8.0",
    "yt-dlp>=2025.10.22",
    "m3u8>=6.0.0",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "inquirerpy>=0.3.4",
    "gamdl",
]

[project.scripts]
music-download-telegram-bot = "bot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.extra-build-dependencies]
"construct" = ["setuptools"]
